--- a/assets/styles.css
+++ b/assets/styles.css
@@ -310,16 +310,16 @@ BEST
     width: 90%;
     height: 25rem;
     /* border: 2px solid black;  */
-    border-radius: 2rem  0 2rem 0;
+    border-radius: 2rem 0 2rem 0;
 }
 
-.best-head{
+.best-head {
     font-size: 2.5rem;
     color: black;
     margin-left: 2rem;
 }
 
-.best-head_para{
+.best-head_para {
     font-size: .9rem;
     color: gray;
     width: 25rem;
@@ -328,27 +328,27 @@ BEST
 }
 
 .swiper {
-  width: 100%;
-  height: 100%;
-  border-radius: 2rem  0 2rem 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 2rem 0 2rem 0;
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 2rem  0 2rem 0;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2rem 0 2rem 0;
 }
 
 .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 2rem  0 2rem 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2rem 0 2rem 0;
 }
 
 
@@ -358,12 +358,11 @@ BEST
 
 */
 
-.solution-container{
+.solution-container {
     background-color: whitesmoke;
-    height: 50rem;
 }
 
-.solution-row{
+.solution-row {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
@@ -374,17 +373,17 @@ BEST
     gap: 1.5rem;
 }
 
-.solution-small_head{
+.solution-small_head {
     color: gray;
     font-size: 1rem;
 }
 
-.solution-head{
+.solution-head {
     font-size: 2rem;
     color: black;
 }
 
-.solution-head_para{
+.solution-head_para {
     width: 30rem;
     text-align: center;
     font-size: .9rem;
@@ -392,9 +391,366 @@ BEST
 
 }
 
-.solu-parent{
+.solu-parent {
     width: 100%;
+    height: 100rem;
+    /* border: 2px solid lightblue; */
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    padding: 3rem 0;
+}
+
+.solu-child_area {
+    display: flex;
+    justify-content: space-around;
+}
+
+.solu-fig {
+    width: 40%;
+    height: 28rem;
+    /* border: 2px solid lightblue; */
+    padding: 2rem;
+}
+
+.solu-img {
+    width: 100%;
+
+}
+
+.solu-text_area {
+    width: 50%;
+    height: 28rem;
+    /* border: 2px solid lightblue; */
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.solu-textHead {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: black;
+}
+
+.solu-textPara {
+    font-size: 1.5rem;
+    color: black;
+}
+
+.solu-textTwo {
+    font-size: .9rem;
+    color: gray;
+}
+
+.solu-text_card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.solu-textChild_card {
+    width: 45%;
+    height: 4rem;
+    border: 2px solid teal;
+}
+
+.solu-btn {
+    background-color: black;
+    border: none;
+    border-radius: .5rem;
+    font-size: .8rem;
+    color: whitesmoke;
+    padding: .8rem 1rem;
+    cursor: pointer;
+    width: 10rem;
+    font-weight: 700;
+}
+
+/* 
+
+TESTIMONIAL
+
+*/
+
+.test-container {
+    background-color: whitesmoke;
+    height: 45rem;
+}
+
+.test-row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.test-parent {
+    height: 40rem;
+    /* border: 2px solid lightblue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+    padding: 2rem 0;
+}
+
+.test-child {
+    width: 90%;
     height: 25rem;
-    border: 2px solid lightblue;
+    border: 2px solid teal;
+    border-radius: 10rem 0 10rem 10rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.test-head {
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+.twoHeaders {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+
+.test-smallHead {
+    display: flex;
+    gap: .5rem;
+}
+
+.test-smallHead {
+    text-align: center;
+    color: gray;
+}
+
+.test-fig {
+    width: 30%;
+    height: 20rem;
+    border: 5px solid teal;
+    border-radius: 50%;
+}
+
+.test-textArea {
+    width: 50%;
+    height: 20rem;
+    /* border: 2px solid teal; */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 3rem;
+}
+
+.test-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.test-quote {
+    width: 4rem;
+    height: 2.3rem;
+}
+
+.test-name_ocp {
+    color: gray;
+}
+
+
+/* 
+
+CONTACT
+
+*/
+
+#contact {
+    position: relative;
+    /* height: 60rem; */
+    /* margin-bottom: 10rem; */
+}
+
+#contact::before {
+    background: url("./wave.svg");
+    content: "";
+    position: absolute;
+    width: 98.7vw;
+    height: 12vw;
+    top: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+}
+
+.con-container {
+    height: 30rem;
+}
+
+.con-row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 5rem 0;
+}
+
+.con-parent {
+    width: 100%;
+    height: 20rem;
+    /* border: 2px solid teal; */
+    display: flex;
+    justify-content: space-around;
+    background-color: whitesmoke;
+    border-radius: 4rem;
+    padding: 4rem;
+}
+
+.con-text_area {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: .5rem;
+}
+
+.con-textHead {
+    font-size: 2rem;
+}
+
+.con-textPara {
+    color: gray;
+    font-size: .8rem;
+    font-weight: bold;
+    width: 25rem;
+}
+
+.con-btnArea {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.get-btn {
+    background-color: black;
+    border: none;
+    border-radius: .5rem;
+    font-size: .8rem;
+    color: whitesmoke;
+    padding: .8rem 1rem;
+    cursor: pointer;
+    width: 10rem;
+    font-weight: 700;
+}
+
+.con-btn {
+    background-color: black;
+    border: none;
+    border-radius: .5rem;
+    font-size: .8rem;
+    color: whitesmoke;
+    padding: .8rem 1rem;
+    cursor: pointer;
+    width: 10rem;
+    font-weight: 700;
+}
+
+/* 
+
+FOOTER 
+
+*/
+
+.foot-container{
+    background-color: black;
+   
+}
+
+.foot-row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 5rem;
+    /* border-bottom: 2px solid gray; */
+}
+
+.foot-parent{
+    display: flex;
+    justify-content: space-around;
+}
+
+.foot-parentText{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.foot-head,.foot-para{
+    color: whitesmoke;
+}
+
+
+
+.foot-btn_area{
+    width: 40%;
+    display: flex;
+    align-items: center;
+    padding:  0 4rem;
+    justify-content: center;
+}
+
+.foot-btn{
+    background-color: whitesmoke;
+    border: none;
+    border-radius: .5rem;
+    font-size: .8rem;
+    color:black ;
+    padding: .8rem 1rem;
+    cursor: pointer;
+    width: 10rem;
+    font-weight: 700;
+}
+
+.foot-smallHead{
+    color: gray;
+
+}
+
+.foot-mailPhone{
+    display: flex;
+    gap: 1rem;
+}
+
+.foot-mail,.foot-phone{
+    color: gray;
+}
+
+.footer-row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 2rem;
+    border-top: 1px solid gray;
+}
+
+.footer-parent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.copy{
+    color: whitesmoke;
+}
+
+.footer-logo{
+    color: whitesmoke;
 }
 
