--- a/assets/styles.css
+++ b/assets/styles.css
@@ -83,7 +83,7 @@ NAV END
 */
 
 header{
-  background-image: linear-gradient(rgba(252, 2, 2, 0.24),rgba(252, 2, 2, 0.24)),url(./hero-2.webp);
+  background-image: linear-gradient(rgba(75, 73, 73, 0.50),rgba(75, 73, 73, 0.50)),url(./hero-2.webp);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -105,16 +105,16 @@ header{
 }
 
 .header-text {
-  font-size: 2.5rem;
+  font-size: 3rem;
   color: whitesmoke;
-  width: 20rem;
+  width: 35rem;
   line-height: 3.5rem;
 }
 
 .header-para {
   width: 30rem;
   font-size: 0.9rem;
-  color: gray;
+  color: whitesmoke;
 }
 
 .header-fig {
@@ -177,19 +177,20 @@ MAIN
   background-size: cover;
   background-repeat: no-repeat;
   transform: translateY(100%) rotate(180deg);
-}
+} 
 
 .high-row {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 4rem 0;
 }
 
 .high-card_parent {
   display: flex;
   justify-content: center;
   gap: 6rem;
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
 }
 
 .high-card {
@@ -230,6 +231,7 @@ MAIN
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 4rem 0;
 }
 
 .bus-img_area {
@@ -287,80 +289,7 @@ MAIN
   gap: 0.5rem;
 }
 
-/* 
 
-BEST 
-
-*/
-
-#best {
-  background-color: whitesmoke;
-  height: 45rem;
-}
-
-.best-container {
-  display: flex;
-}
-
-.best-row {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  height: 30rem;
-  /* border: 2px solid lightblue; */
-  margin-top: 10rem;
-}
-
-.best-parent {
-  display: flex;
-  justify-content: center;
-  padding: 2rem 0;
-}
-
-.best-child {
-  width: 90%;
-  height: 25rem;
-  /* border: 2px solid black;  */
-  border-radius: 2rem 0 2rem 0;
-}
-
-.best-head {
-  font-size: 2.5rem;
-  color: black;
-  margin-left: 2rem;
-}
-
-.best-head_para {
-  font-size: 0.9rem;
-  color: gray;
-  width: 25rem;
-  line-height: 1.5rem;
-  margin-left: 2rem;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-  border-radius: 2rem 0 2rem 0;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 2rem 0 2rem 0;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 2rem 0 2rem 0;
-}
 
 /* 
 
@@ -370,6 +299,7 @@ BEST
 
 .solution-container {
   background-color: white;
+  
 }
 
 .solution-row {
@@ -495,7 +425,8 @@ TESTIMONIAL
 
 .test-container {
   background-color: whitesmoke;
-  height: 45rem;
+  height: 60rem;
+  padding: 13rem 0;
 }
 
 .test-row {
@@ -511,7 +442,8 @@ TESTIMONIAL
   flex-direction: column;
   align-items: center;
   gap: 4rem;
-  padding: 2rem 0;
+  /* padding: 4rem 0; */
+  margin-bottom: 5rem;
 }
 
 .test-child {
@@ -590,7 +522,7 @@ CONTACT
   /* margin-bottom: 10rem; */
 }
 
-#contact::before {
+ #contact::before {
   background: url("./wave.svg");
   content: "";
   position: absolute;
@@ -599,10 +531,10 @@ CONTACT
   top: 1px;
   left: 0;
   /* z-index: 1; */
-  background-size: cover;
+   background-size: cover;
   background-repeat: no-repeat;
   transform: translateY(-100%);
-}
+} 
 
 .con-container {
   height: 30rem;
@@ -779,6 +711,10 @@ FOOTER
   color: whitesmoke;
 }
 
+.foot-link{
+  color: white;
+}
+
 /* 
 
 SERVICES
@@ -815,6 +751,7 @@ ABOUT
 
 .about-first_secHead {
   font-size: 2.5rem;
+  text-align: center;
 }
 
 .about-first_secHeadTwo {
@@ -852,7 +789,7 @@ why
 
 .why-child {
   width: 100%;
-  height: 20rem;
+  height: 15rem;
   /* border: 2px solid gray; */
   border-radius: 3rem 0 3rem 0;
   background-color: whitesmoke;
@@ -869,7 +806,7 @@ why
 
 .whyParaHead {
   border-bottom: 2px solid black;
-  width: 4.5rem;
+  width: 5.5rem;
 }
 
 .borderTwo {
@@ -1011,6 +948,10 @@ textarea {
 
 .add-para {
     color: black;
+}
+
+.add-width{
+  text-align: center;
 }
 
 /* 
@@ -1156,6 +1097,8 @@ pro
 
 .proParaTwo {
     color: gray;
+    font-size: .8rem;
+    font-weight: bold;
 }
 
 .pro-btn {
