--- a/assets/styles.css
+++ b/assets/styles.css
@@ -462,9 +462,9 @@ TESTIMONIAL
 
 .test-child {
   width: 90%;
-  height: 25rem;
+  height: 15rem;
   border: 2px solid teal;
-  border-radius: 10rem 0 10rem 10rem;
+  border-radius: 5rem 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -492,16 +492,16 @@ TESTIMONIAL
   color: gray;
 }
 
-.test-fig {
+/* .test-fig {
   width: 30%;
   height: 20rem;
   border: 5px solid teal;
   border-radius: 50%;
-}
+} */
 
 .test-textArea {
-  width: 50%;
-  height: 20rem;
+  width: 90%;
+  height: 15rem;
   /* border: 2px solid teal; */
   display: flex;
   flex-direction: column;
@@ -509,11 +509,11 @@ TESTIMONIAL
   padding: 3rem;
 }
 
-.test-img {
+/* .test-img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-}
+} */
 
 .test-quote {
   width: 4rem;
